[metadata]
version = 0.0.2
name = Nuon Model Visualizer
summary = Visualizer for the Nuon Model theory
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/favreau/NuonModelVisualizer
author = Cyrille Favreau
author-email = cyrille.favreau@gmail.com
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = physics, quantum, field, high energy, theory

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D203,D212,D400,D401

[coverage:report]
show_missing = True
